refactor: delegate local process ownership to external MCP gateway